--- a/indfex.html
+++ b/indfex.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- REMIX ICON -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
-    <title>Document</title>
+    <title>Assignment</title>
 </head>
 <body>
     <header>
@@ -22,11 +22,11 @@
                     </div>
                 </div>
                 <ul class="nav-menu" id="nav-munu">
+                    <li><a href="#" class="active">About</a></li>
+                    <li><a href="#">Newsletter</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
                     <li><a href="#">About</a></li>
                 </ul>
             </div>
